fixing `Analysis Example.ipynb` notebook

--- a/notebooks/Analysis Example.ipynb
+++ b/notebooks/Analysis Example.ipynb
@@ -20,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from orion.analysis import analyze\n",
     "from orion.explorer import OrionExplorer"
    ]
   },
@@ -30,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orex = OrionExplorer('user-id', 'orion')"
+    "orex = OrionExplorer()"
    ]
   },
   {
@@ -78,35 +77,35 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>dataset_id</th>\n",
-       "      <th>created_by</th>\n",
+       "      <th>data_location</th>\n",
        "      <th>insert_time</th>\n",
        "      <th>name</th>\n",
        "      <th>signal_set</th>\n",
-       "      <th>timestamp_column</th>\n",
-       "      <th>value_column</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>stop_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c8a817a1854814a0156149b</td>\n",
-       "      <td>user-id</td>\n",
-       "      <td>2019-03-14 16:29:46.113</td>\n",
+       "      <td>5c9e5c0d18548179ab641a6e</td>\n",
+       "      <td>S-1</td>\n",
+       "      <td>2019-03-29 17:55:25.206</td>\n",
        "      <td>S-1</td>\n",
        "      <td>S-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1222819200</td>\n",
+       "      <td>1442016000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 dataset_id created_by             insert_time name  \\\n",
-       "0  5c8a817a1854814a0156149b    user-id 2019-03-14 16:29:46.113  S-1   \n",
+       "                 dataset_id data_location             insert_time name  \\\n",
+       "0  5c9e5c0d18548179ab641a6e           S-1 2019-03-29 17:55:25.206  S-1   \n",
        "\n",
-       "  signal_set  timestamp_column  value_column  \n",
-       "0        S-1                 0             1  "
+       "  signal_set  start_time   stop_time  \n",
+       "0        S-1  1222819200  1442016000  "
       ]
      },
      "execution_count": 5,
@@ -165,7 +164,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>pipeline_id</th>\n",
-       "      <th>created_by</th>\n",
        "      <th>insert_time</th>\n",
        "      <th>mlpipeline</th>\n",
        "      <th>name</th>\n",
@@ -174,9 +172,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c8a817b1854814a0156149c</td>\n",
-       "      <td>user-id</td>\n",
-       "      <td>2019-03-14 16:29:47.875</td>\n",
+       "      <td>5c9e5c0f18548179ab641a6f</td>\n",
+       "      <td>2019-03-29 17:55:27.538</td>\n",
        "      <td>{'primitives': ['orion.primitives.estimators.M...</td>\n",
        "      <td>dummy</td>\n",
        "    </tr>\n",
@@ -185,8 +182,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                pipeline_id created_by             insert_time  \\\n",
-       "0  5c8a817b1854814a0156149c    user-id 2019-03-14 16:29:47.875   \n",
+       "                pipeline_id             insert_time  \\\n",
+       "0  5c9e5c0f18548179ab641a6f 2019-03-29 17:55:27.538   \n",
        "\n",
        "                                          mlpipeline   name  \n",
        "0  {'primitives': ['orion.primitives.estimators.M...  dummy  "
@@ -234,17 +231,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "datarun = analyze(orex, 'S-1', 'dummy')"
+    "datarun = orex.analyze('S-1', 'dummy')"
    ]
   },
   {
@@ -274,7 +263,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>datarun_id</th>\n",
-       "      <th>created_by</th>\n",
        "      <th>dataset</th>\n",
        "      <th>end_time</th>\n",
        "      <th>events</th>\n",
@@ -287,14 +275,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>user-id</td>\n",
-       "      <td>5c8a817a1854814a0156149b</td>\n",
-       "      <td>2019-03-14 16:30:00.499</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>5c9e5c0d18548179ab641a6e</td>\n",
+       "      <td>2019-03-29 17:55:37.034</td>\n",
        "      <td>926</td>\n",
-       "      <td>2019-03-14 16:29:58.534</td>\n",
-       "      <td>5c8a817b1854814a0156149c</td>\n",
-       "      <td>2019-03-14 16:29:58.532</td>\n",
+       "      <td>2019-03-29 17:55:35.638</td>\n",
+       "      <td>5c9e5c0f18548179ab641a6f</td>\n",
+       "      <td>2019-03-29 17:55:35.637</td>\n",
        "      <td>done</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -302,14 +289,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                 datarun_id created_by                   dataset  \\\n",
-       "0  5c8a81861854814a0156149d    user-id  5c8a817a1854814a0156149b   \n",
+       "                 datarun_id                   dataset                end_time  \\\n",
+       "0  5c9e5c1718548179ab641a70  5c9e5c0d18548179ab641a6e 2019-03-29 17:55:37.034   \n",
        "\n",
-       "                 end_time  events             insert_time  \\\n",
-       "0 2019-03-14 16:30:00.499     926 2019-03-14 16:29:58.534   \n",
+       "   events             insert_time                  pipeline  \\\n",
+       "0     926 2019-03-29 17:55:35.638  5c9e5c0f18548179ab641a6f   \n",
        "\n",
-       "                   pipeline              start_time status  \n",
-       "0  5c8a817b1854814a0156149c 2019-03-14 16:29:58.532   done  "
+       "               start_time status  \n",
+       "0 2019-03-29 17:55:35.637   done  "
       ]
      },
      "execution_count": 11,
@@ -359,9 +346,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c8a81861854814a0156149e</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.594</td>\n",
+       "      <td>5c9e5c1718548179ab641a71</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.719</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
@@ -369,9 +356,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5c8a81861854814a0156149f</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.638</td>\n",
+       "      <td>5c9e5c1718548179ab641a72</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.761</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223013600</td>\n",
        "      <td>1223035200</td>\n",
@@ -379,9 +366,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5c8a81861854814a015614a0</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.642</td>\n",
+       "      <td>5c9e5c1718548179ab641a73</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.765</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223510400</td>\n",
        "      <td>1223532000</td>\n",
@@ -389,9 +376,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5c8a81861854814a015614a1</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.646</td>\n",
+       "      <td>5c9e5c1718548179ab641a74</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.769</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223575200</td>\n",
        "      <td>1223596800</td>\n",
@@ -399,9 +386,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5c8a81861854814a015614a2</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.651</td>\n",
+       "      <td>5c9e5c1718548179ab641a75</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.774</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223618400</td>\n",
        "      <td>1223640000</td>\n",
@@ -413,11 +400,11 @@
       ],
       "text/plain": [
        "                   event_id                   datarun             insert_time  \\\n",
-       "0  5c8a81861854814a0156149e  5c8a81861854814a0156149d 2019-03-14 16:29:58.594   \n",
-       "1  5c8a81861854814a0156149f  5c8a81861854814a0156149d 2019-03-14 16:29:58.638   \n",
-       "2  5c8a81861854814a015614a0  5c8a81861854814a0156149d 2019-03-14 16:29:58.642   \n",
-       "3  5c8a81861854814a015614a1  5c8a81861854814a0156149d 2019-03-14 16:29:58.646   \n",
-       "4  5c8a81861854814a015614a2  5c8a81861854814a0156149d 2019-03-14 16:29:58.651   \n",
+       "0  5c9e5c1718548179ab641a71  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.719   \n",
+       "1  5c9e5c1718548179ab641a72  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.761   \n",
+       "2  5c9e5c1718548179ab641a73  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.765   \n",
+       "3  5c9e5c1718548179ab641a74  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.769   \n",
+       "4  5c9e5c1718548179ab641a75  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.774   \n",
        "\n",
        "      score  start_time   stop_time  comments  \n",
        "0  0.572644  1222970400  1222992000         0  \n",
@@ -443,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orex.add_comment(events.event_id.iloc[0], 'This is a comment example.')"
+    "orex.add_comment(events.event_id.iloc[0], 'This is a comment example.', 'user-id')"
    ]
   },
   {
@@ -452,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orex.add_comment(events.event_id.iloc[0], 'This is another comment.')"
+    "orex.add_comment(events.event_id.iloc[0], 'This is another comment.', 'other-user-id')"
    ]
   },
   {
@@ -493,9 +480,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c8a81861854814a0156149e</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.594</td>\n",
+       "      <td>5c9e5c1718548179ab641a71</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.719</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
@@ -503,9 +490,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5c8a81861854814a0156149f</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.638</td>\n",
+       "      <td>5c9e5c1718548179ab641a72</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.761</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223013600</td>\n",
        "      <td>1223035200</td>\n",
@@ -513,9 +500,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5c8a81861854814a015614a0</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.642</td>\n",
+       "      <td>5c9e5c1718548179ab641a73</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.765</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223510400</td>\n",
        "      <td>1223532000</td>\n",
@@ -523,9 +510,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5c8a81861854814a015614a1</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.646</td>\n",
+       "      <td>5c9e5c1718548179ab641a74</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.769</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223575200</td>\n",
        "      <td>1223596800</td>\n",
@@ -533,9 +520,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5c8a81861854814a015614a2</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
-       "      <td>2019-03-14 16:29:58.651</td>\n",
+       "      <td>5c9e5c1718548179ab641a75</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
+       "      <td>2019-03-29 17:55:35.774</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223618400</td>\n",
        "      <td>1223640000</td>\n",
@@ -547,11 +534,11 @@
       ],
       "text/plain": [
        "                   event_id                   datarun             insert_time  \\\n",
-       "0  5c8a81861854814a0156149e  5c8a81861854814a0156149d 2019-03-14 16:29:58.594   \n",
-       "1  5c8a81861854814a0156149f  5c8a81861854814a0156149d 2019-03-14 16:29:58.638   \n",
-       "2  5c8a81861854814a015614a0  5c8a81861854814a0156149d 2019-03-14 16:29:58.642   \n",
-       "3  5c8a81861854814a015614a1  5c8a81861854814a0156149d 2019-03-14 16:29:58.646   \n",
-       "4  5c8a81861854814a015614a2  5c8a81861854814a0156149d 2019-03-14 16:29:58.651   \n",
+       "0  5c9e5c1718548179ab641a71  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.719   \n",
+       "1  5c9e5c1718548179ab641a72  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.761   \n",
+       "2  5c9e5c1718548179ab641a73  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.765   \n",
+       "3  5c9e5c1718548179ab641a74  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.769   \n",
+       "4  5c9e5c1718548179ab641a75  5c9e5c1718548179ab641a70 2019-03-29 17:55:35.774   \n",
        "\n",
        "      score  start_time   stop_time  comments  \n",
        "0  0.572644  1222970400  1222992000         2  \n",
@@ -610,26 +597,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c8a81861854814a0156149e</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>5c9e5c1718548179ab641a71</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
-       "      <td>5c8a818d1854814a0156183c</td>\n",
+       "      <td>5c9e5c2218548179ab641e0f</td>\n",
        "      <td>user-id</td>\n",
-       "      <td>2019-03-14 16:30:05.449</td>\n",
+       "      <td>2019-03-29 17:55:46.510</td>\n",
        "      <td>This is a comment example.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5c8a81861854814a0156149e</td>\n",
-       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>5c9e5c1718548179ab641a71</td>\n",
+       "      <td>5c9e5c1718548179ab641a70</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
-       "      <td>5c8a818e1854814a0156183d</td>\n",
-       "      <td>user-id</td>\n",
-       "      <td>2019-03-14 16:30:06.514</td>\n",
+       "      <td>5c9e5c2618548179ab641e10</td>\n",
+       "      <td>other-user-id</td>\n",
+       "      <td>2019-03-29 17:55:50.589</td>\n",
        "      <td>This is another comment.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -638,16 +625,16 @@
       ],
       "text/plain": [
        "                   event_id                   datarun     score  start_time  \\\n",
-       "0  5c8a81861854814a0156149e  5c8a81861854814a0156149d  0.572644  1222970400   \n",
-       "1  5c8a81861854814a0156149e  5c8a81861854814a0156149d  0.572644  1222970400   \n",
+       "0  5c9e5c1718548179ab641a71  5c9e5c1718548179ab641a70  0.572644  1222970400   \n",
+       "1  5c9e5c1718548179ab641a71  5c9e5c1718548179ab641a70  0.572644  1222970400   \n",
        "\n",
-       "    stop_time                comment_id created_by             insert_time  \\\n",
-       "0  1222992000  5c8a818d1854814a0156183c    user-id 2019-03-14 16:30:05.449   \n",
-       "1  1222992000  5c8a818e1854814a0156183d    user-id 2019-03-14 16:30:06.514   \n",
+       "    stop_time                comment_id     created_by  \\\n",
+       "0  1222992000  5c9e5c2218548179ab641e0f        user-id   \n",
+       "1  1222992000  5c9e5c2618548179ab641e10  other-user-id   \n",
        "\n",
-       "                         text  \n",
-       "0  This is a comment example.  \n",
-       "1    This is another comment.  "
+       "              insert_time                        text  \n",
+       "0 2019-03-29 17:55:46.510  This is a comment example.  \n",
+       "1 2019-03-29 17:55:50.589    This is another comment.  "
       ]
      },
      "execution_count": 16,
