update `Process CSV Signals.ipynb` notebook

--- a/notebooks/Process CSV Signals.ipynb
+++ b/notebooks/Process CSV Signals.ipynb
@@ -45,7 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explorer = OrionExplorer('orion')"
+    "explorer = OrionExplorer()\n",
+    "explorer.drop_database()  # in case name signals already exist"
    ]
   },
   {
