avoid dropping DB

--- a/notebooks/Process CSV Signals.ipynb
+++ b/notebooks/Process CSV Signals.ipynb
@@ -45,8 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explorer = OrionExplorer()\n",
-    "explorer.drop_database()  # in case name signals already exist"
+    "explorer = OrionExplorer()"
    ]
   },
   {
