Add examples and improve notebooks

--- a/notebooks/CSV Analysis Example.ipynb
+++ b/notebooks/CSV Analysis Example.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline Scoring Example"
+    "# CSV Analysis Example"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a demo notebook showing how to use the `orion.analysis.analyze` function on one of the\n",
-    "signals from the Demo Dataset and afterwards evaluate how well the pipeline performed.\n",
-    "\n",
-    "In this case, we will be processing the `S-1` signal with the `lstm_dynamic_threshold.json`\n",
-    "pipeline."
+    "This is a demo notebook showing how to use the `orion.analysis.analyze` function on a CSV signal."
    ]
   },
   {
@@ -24,10 +20,12 @@
    "source": [
     "## 1. Load the data\n",
     "\n",
-    "In the first step, we setup the environment and load the **S-1** signal from the **Demo Dataset**,\n",
+    "In the first step, we setup the environment and load the CSV that we want to process.\n",
     "\n",
     "To do so, we need to import the `orion.data.load_signal` function and call it passing\n",
-    "the `'S-1'` name."
+    "the path to the CSV file.\n",
+    "\n",
+    "In this case, we will be loading the `S-1.csv` file from inside the `data` folder."
    ]
   },
   {
@@ -121,7 +119,10 @@
    ],
    "source": [
     "from orion.data import load_signal\n",
-    "data = load_signal('S-1')\n",
+    "\n",
+    "signal_path = 'data/S-1.csv'\n",
+    "\n",
+    "data = load_signal(signal_path)\n",
     "data.head()"
    ]
   },
@@ -136,6 +137,8 @@
     "In order to do so, we will have import the `orion.analysis.analyze` function and pass it\n",
     "the loaded data and the path to the pipeline JSON that we want to use.\n",
     "\n",
+    "In this case, we will be using the `lstm_dynamic_threshold.json` pipeline from inside the `orion` folder.\n",
+    "\n",
     "The output of the will be a ``pandas.DataFrame`` containing a table with the detected anomalies."
    ]
   },
@@ -149,6 +152,14 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "9899/9899 [==============================] - 61s 6ms/step - loss: 0.0554 - mean_squared_error: 0.0554\n"
      ]
     },
     {
@@ -180,21 +191,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1222840800</td>\n",
-       "      <td>1222840800</td>\n",
-       "      <td>0.214429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1222884000</td>\n",
-       "      <td>1222884000</td>\n",
-       "      <td>0.190488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1398060000</td>\n",
-       "      <td>1399485600</td>\n",
-       "      <td>0.228909</td>\n",
+       "      <td>1398081600</td>\n",
+       "      <td>1399464000</td>\n",
+       "      <td>0.158533</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -202,9 +201,7 @@
       ],
       "text/plain": [
        "        start         end     score\n",
-       "0  1222840800  1222840800  0.214429\n",
-       "1  1222884000  1222884000  0.190488\n",
-       "2  1398060000  1399485600  0.228909"
+       "0  1398081600  1399464000  0.158533"
       ]
      },
      "execution_count": 3,
@@ -219,124 +216,6 @@
     "\n",
     "anomalies = analyze(pipeline_path, data)\n",
     "anomalies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Evaluate performance\n",
-    "\n",
-    "In this next step we will load some already known anomalous intervals and evaluate how\n",
-    "good our anomaly detection was by comparing those with our detected intervals.\n",
-    "\n",
-    "For this, we will first load the known anomalies for the signal that we are using:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1392768000</td>\n",
-       "      <td>1402423200</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        start         end\n",
-       "0  1392768000  1402423200"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from orion.data import load_anomalies\n",
-    "known_anomalies = load_anomalies('S-1')\n",
-    "known_anomalies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Afterwards, we pass the ground truth, the detected anomalies and the original data\n",
-    "to the `orion.metrics.accuracy_score` and `orion.metrics.f1_score` functions in order\n",
-    "to compute a score that indicates how good our anomaly detection was:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9624556562869531"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from orion.metrics import accuracy_score, f1_score\n",
-    "accuracy_score(known_anomalies, anomalies, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2573099415204679"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1_score(known_anomalies, anomalies, data)"
    ]
   }
  ],
@@ -356,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
