--- a/notebooks/OrionExplorer - CSV Processing.ipynb
+++ b/notebooks/OrionExplorer - CSV Processing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CSV Processing Example"
+    "# OrionExplorer - CSV Processing"
    ]
   },
   {
@@ -688,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
