--- a/notebooks/OrionExplorer - Usage Example.ipynb
+++ b/notebooks/OrionExplorer - Usage Example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OrionExplorer Usage Example"
+    "# OrionExplorer - Usage Example"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
