fix typo in `CSV Analysis Example.ipynb` notebook

--- a/notebooks/CSV Analysis Example.ipynb
+++ b/notebooks/CSV Analysis Example.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "In this case, we will be using the `lstm_dynamic_threshold.json` pipeline from inside the `orion` folder.\n",
     "\n",
-    "The output of the will be a ``pandas.DataFrame`` containing a table with the detected anomalies."
+    "The output will be a ``pandas.DataFrame`` containing a table with the detected anomalies."
    ]
   },
   {
