fix typo in `OrionExplorer - Usage Example.ipynb` notebook

--- a/notebooks/OrionExplorer - Usage Example.ipynb
+++ b/notebooks/OrionExplorer - Usage Example.ipynb
@@ -198,9 +198,7 @@
     "passing:\n",
     "\n",
     "* the name that we are giving to this the dataset\n",
-    "* the signal that we want to use\n",
-    "\n",
-    "Just like before, we will also capture the output of the `add_dataset` call in a variable."
+    "* the signal that we want to use"
    ]
   },
   {
