fix typo in the `Pipeline Scoring Example.ipynb` notebook

--- a/notebooks/Pipeline Scoring Example.ipynb
+++ b/notebooks/Pipeline Scoring Example.ipynb
@@ -136,7 +136,7 @@
     "In order to do so, we will have import the `orion.analysis.analyze` function and pass it\n",
     "the loaded data and the path to the pipeline JSON that we want to use.\n",
     "\n",
-    "The output of the will be a ``pandas.DataFrame`` containing a table with the detected anomalies."
+    "The output will be a ``pandas.DataFrame`` containing a table with the detected anomalies."
    ]
   },
   {
